2007-06-21  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Canon A560

2007-05-28  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Nikon Coolpix L10.

2007-05-27  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Canon A570 IS.

2007-05-05  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added FujiFilm F40 fd
	http://gphoto.org/bugs/?id=1713438

2007-04-08  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/directory/directory.c: added more RAW types.
	Should fix bug #1696551
	http://gphoto.org/bugs/?id=1696551

2007-03-01  Marcus Meissner  <marcus@jet.franken.de>
	    Theodore Kilgore <kilgota@banach.math.auburn.edu>

	* libgphoto2/bayer.{c,h}: Enhanced bayer algorithm.

2007-01-31  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: added Coolpix P4.
	added Kodak P880

2007-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2/gphoto2-filesys.c: 
	  Bugfixes for LRU double linked list handling.

2007-01-03  Hubert Figuiere  <hub@figuiere.net>

	* libgphoto2_port/disk/disk.c (gp_port_library_list): handle
	automounter properly when there is no HAL.

	* camlibs/directory/directory.c (file_list_func): ignore entries
	that start with '.'
	(folder_list_func): ignore entries that start with '.'
	Some code style cleaning.

2006-11-25  Hubert Figuiere  <hub@figuiere.net>

	* libgphoto2_port/configure.ac: bump soname for libgphoto2_port
	post 2.3.0 branch

	* configure.ac: 2.3.0.1.trunk because we branched 2.3.0

2006-10-14  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/panasonic/l859/l859.c,
	camlibs/enigma13/enigma13.c (enigma13_get_toc),
	camlibs/panasonic/l859/README.panasonic-l859,
	camlibs/panasonic/dc.h: Fixed typo
	https://launchpad.net/distros/ubuntu/+source/libgphoto2/+bug/61163


2006-10-07  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/canon/canon.c, camlibs/konica/qm150.c,
	camlibs/ptp2/ptp.c, camlibs/sierra/library.c, 