@@ -1,3 +1,7 @@
+2007-07-25  Hubert Figuiere  <hub@figuiere.net>
+
+	* camlibs/ptp2/library.c: Added Kodak Z712 IS
+
 2007-06-21  Hubert Figuiere  <hub@figuiere.net>
 
 	* camlibs/ptp2/library.c: Added Canon A560
